--- a/Verification_template.Rmd
+++ b/Verification_template.Rmd
@@ -21,7 +21,7 @@ M <- c(1,3,6)
 sigma<-matrix(rep(rho,M*M),nrow=M,ncol=M)
 diag(sigma)<-1
 mdes_<-c(0.125,0.5)
-MDES1<-c(rep(mdes_,M)
+MDES1<-c(rep(mdes_,M))  #this doesnt run, M has too many arguments- loop?
 MDES2<-c(rep(mdes_,M*2/3),rep(0,M/3))
 MDES3<-c(rep(mdes_,M/3),rep(0,M*2/3))
 p <- 0.5
