--- a/MonteCarloSimulation.Rmd
+++ b/MonteCarloSimulation.Rmd
@@ -62,7 +62,7 @@ Specify parameters
 
 
 ```{r specifications}
-rho<-0.8
+rho<-0.5
 
 ncl<-8
 
@@ -85,7 +85,7 @@ rho.1_lev2<-matrix(0.5,M,M); diag(rho.1_lev2)<-1
 
 
 #pastes together specifications into a file name
-simname<-paste0(design[1], "M", M, "n.j", n.j, "J", J, "ICC", ICC[1], "MDES", MDES[1], "rho", rho, "_S", S, "B", B, "_R2.1", R2.1[1],"_R2.2",R2.2[1], "_sim.Rda")
+simname<-paste0(design[1], "M", M, "n.j", n.j, "J", J, "ICC", ICC[1], "MDES", MDES[1], "rho", rho, "_S", S, "B", B, "_R2.1", R2.1[1],"_R2.2",R2.2[1], "_sim.Rds")
 
 ```
 
@@ -104,7 +104,11 @@ print(paste("Run with S=", S, " and B =", B, " with ncl=", ncl, " took ", diffti
 
 #what is maxT and check?
 
-#save(simpwr, file=simname)
+#save file
+#fdir <- "~/R/Data Files/"
+#fname<- paste0(fdir,simname)
+
+#write.table(simpwr, file=fname)
 ```
 
 
