--- a/powerFunctions.Rmd
+++ b/powerFunctions.Rmd
@@ -235,18 +235,19 @@ power.blockedRCT.2<-function(M, MDES, J, n.j,
   
   
 #pastes together specifications into a file name
-powname<-paste0(design[1], "M", M, "n.j", n.j, "J", J, "MDES", MDES[1], "rho", rho, "_power.Rda")
+filname<-paste0(design[1], "M", M, "n.j", n.j, "J", J, "MDES", MDES[1], "rho", rho, "_power.Rda")
   
-powname <- power.blockedRCT.2(M, MDES, J, n.j,
+#run code  
+power.mult <- power.blockedRCT.2(M, MDES, J, n.j,
                     p, alpha, numCovar.1, numCovar.2, R2.1, R2.2, ICC, 
                     mod.type = "constant", sigma, omega = NULL,
                     tnum=tnum, snum=snum, ncl)
-  
+power.mult  
 
 #export file
-#fdir <- "I:/Multiplicity/git/dc_repo/"
-#fname<- paste0(fdir,powname)
-#save(powname, file=fname)
+fdir <- "I:/Multiplicity/git/dc_repo/"
+fpath<- paste0(fdir,filname)
+save(power.mult, file=fpath)
 
 ```
 
