--- a/Verification_Level2RCT.Rmd
+++ b/Verification_Level2RCT.Rmd
@@ -16,65 +16,15 @@ output: html_document:
 fdir <- "I:/Multiplicity/git/dc_repo/"
 
 #files
-fil1 <- "Blocked_i1_2cM6n.j100J20ICC0MDES0.125rho0.5_S3B200_R2.10_R2.20_sim.Rda"
-fil2 <- "Blocked_i1_2cM6n.j50J20MDES0.125rho0_power.Rda"
+power.cor <- "Blocked_i1_2cM6n.j50J20MDES0.125_powerLIST.Rda"
+simpwr.cor <- "Blocked_i1_2cM6n.j100J20ICC0MDES0.125_S3B300_R2.10_R2.20_simpwrLIST.Rda"
 
-#load files
-load(paste0(fdir,fil1))
-load(paste0(fdir,fil2))
+#load lists
+load(paste0(fdir, power.cor))
+load(paste0(fdir, simpwr.cor))
+
 ```
 
-
-# Design and parameter specifications
-
-```{r chunk2_specifications}
-#DC: this code is from the verification template - should we use it instead of the code below that was taken from powerFunctions.Rmd?
-
-#ncl<-24
-#rho<-c(0.2,0.5,0.8)
-#M <- c(1,3,6)
-#sigma<-matrix(rep(rho,M*M),nrow=M,ncol=M)
-#diag(sigma)<-1
-#mdes_<-c(0.125,0.5)
-#MDES1<-c(rep(mdes_,M))    #generates an error- needs looping?
-#MDES2<-c(rep(mdes_,M*2/3),rep(0,M/3))
-#MDES3<-c(rep(mdes_,M/3),rep(0,M*2/3))
-#p <- 0.5
-#R2.1 <- c(0,0.5)
-#R2.2 <- c(0,0.5)
-#numCovar.1 <- c(0,1)
-#numCovar.2 <- c(0,1)
-#ICC <- c(0,0.5)
-#J <- c(20,50)
-#n.j <- c(20,50)
-#alpha = 0.05
-
-
-#from powerfunctions example 
- ncl<-24
-  rho<-0.5
-  M <- 3
-  sigma<-matrix(rep(rho,M*M),nrow=M,ncol=M)
-  diag(sigma)<-1
-  MDES<-c(rep(0.185,M))
-#  MDES<-c(rep(0.3,M*2/3),rep(0,M/3))
-  p <- 0.5
-  R2.1 <- 0
-  R2.2 <- 0
-  numCovar.1 <- 0
-  numCovar.2 <- 0
-  ICC <- 0
-  J <- 50
-  n.j <- 20
-  alpha = 0.05
-
-  
-  
-  
-
-  
-  
-```
 
 # Verify power calculations and capture run times
 
@@ -84,18 +34,21 @@ load(paste0(fdir,fil2))
 
 ```{r chunk3_verifyPower}
 # loop through combinations (don't need all crossed - TBD)
+  # 2 level RCT constant effects, Table C.3 from paper
 
-    #DC: Should we loop based on the parameters above?
-
-  # run new
-  # 2 level RCT constant effects
-  power.blockedRCT.2(M, MDES, J, n.j,
-                      p, alpha, numCovar.1, numCovar.2, R2.1, R2.2, ICC, 
-                      mod.type = "constant", sigma, omega = NULL,
-                      tnum=10000, snum=2, ncl)
+  # display new power calculations
+    power_mutl_storage[[1]]["filename"]
+    power_mutl_storage[[1]]["obj"]
     
+    power_mutl_storage[[2]]["filename"]
+    power_mutl_storage[[2]]["obj"]
+
   # run simulations
-  simpwr
+    sim_power_storage[[1]]["simname"]
+    sim_power_storage[[1]]["obj"]
+  
+    sim_power_storage[[2]]["simname"]
+    sim_power_storage[[2]]["obj"]
   
   # for M=1, look up in Power-Up
 
