--- a/powerFunctions.Rmd
+++ b/powerFunctions.Rmd
@@ -195,9 +195,21 @@ power.blockedRCT.2<-function(M, MDES, J, n.j,
 ```
 
 ```{r power.blockedRCT.2_Example, eval=TRUE, message=FALSE, warning=FALSE}
+#file directory
+fdir <- "I:/Multiplicity/git/dc_repo/"
+
+#create loop ID for list of power estimates with different correlations
+loop_idx <- 1
+
+#assign list object to save datafiles into a list
+power_mutl_storage <- list()
+
+#look through different correlations
+for (rho in c(0,0.2,0.5,0.8)) {
+
   design <- c("Blocked_i1_2c", "Blocked_i1_2f", "Blocked_i1_2r", "Blocked_i1_3r", "Blocked_i1_4r")
   ncl<-2
-  rho<-0
+  #rho<-0
   M <- 6
   sigma<-matrix(rep(rho,M*M),nrow=M,ncol=M)
   diag(sigma)<-1
@@ -215,39 +227,35 @@ power.blockedRCT.2<-function(M, MDES, J, n.j,
   tnum = 10000
   snum = 2
   
-
-#############################################cycling through rho
-#for (rho in c(0,0.2,0.5,0.8)) {
-
-#pastes together specifications into a file name
-#powname<-paste0(design[1], "M", M, "n.j", n.j, "J", J, "MDES", MDES[1], "rho", rho, "_power.Rda")
-
-
-
-#run power function
-#powname <- power.blockedRCT.2(M, MDES, J, n.j,
-#                    p, alpha, numCovar.1, numCovar.2, R2.1, R2.2, ICC, 
-#                    mod.type = "constant", sigma, omega = NULL,
-#                    tnum=tnum, snum=snum, ncl)
-#}
-#####################################################################
+  
+  #create file name
+  filname<-paste0(design[1], "M", M, "n.j", n.j, "J", J, "MDES", MDES[1], "rho", rho, "_power.Rda")
+  
+  #create list name
+  lname<-paste0(design[1], "M", M, "n.j", n.j, "J", J, "MDES", MDES[1], "_powerLIST.Rda")
+    
+  #run power calculation
+  power.mult <- power.blockedRCT.2(M, MDES, J, n.j,
+                      p, alpha, numCovar.1, numCovar.2, R2.1, R2.2, ICC, 
+                      mod.type = "constant", sigma, omega = NULL,
+                      tnum=tnum, snum=snum, ncl)
+  
+  #add data files to list
+  power_mutl_storage[[loop_idx]] <- list()
+  power_mutl_storage[[loop_idx]][["filename"]] <- filname
+  power_mutl_storage[[loop_idx]][["obj"]] <- power.mult
   
   
-  
-#pastes together specifications into a file name
-filname<-paste0(design[1], "M", M, "n.j", n.j, "J", J, "MDES", MDES[1], "rho", rho, "_power.Rda")
-  
-#run code  
-power.mult <- power.blockedRCT.2(M, MDES, J, n.j,
-                    p, alpha, numCovar.1, numCovar.2, R2.1, R2.2, ICC, 
-                    mod.type = "constant", sigma, omega = NULL,
-                    tnum=tnum, snum=snum, ncl)
-power.mult  
+  #export separate data files
+  fpath<- paste0(fdir,filname)
+  save(power.mult, file=fpath)
+  loop_idx <- loop_idx + 1
 
-#export file
-fdir <- "I:/Multiplicity/git/dc_repo/"
-fpath<- paste0(fdir,filname)
-save(power.mult, file=fpath)
+}
+
+#export the list of data files with different correlations for import into validation RMD
+lpath <- paste0(fdir, lname)
+save(power_mutl_storage, file= lpath)
 
 ```
 
