--- a/powerFunctions.Rmd
+++ b/powerFunctions.Rmd
@@ -195,15 +195,6 @@ power.blockedRCT.2<-function(M, MDES, J, n.j,
 ```
 
 ```{r power.blockedRCT.2_Example, eval=TRUE, message=FALSE, warning=FALSE}
-library(yaml)
-
-
-#read in configs file
-configs <- yaml.load_file("configs.yaml")
-
-#set file directory
-fdir <- configs$fdir
-
 #create loop ID for list of power estimates with different correlations
 loop_idx <- 1
 
@@ -254,14 +245,14 @@ for (rho in configs$rho) {
   
   #export separate data files
   fpath<- paste0(fdir,filname)
-  save(power.mult, file=fpath)
+#  save(power.mult, file=fpath)
   loop_idx <- loop_idx + 1
 
 }
 
 #export the list of data files with different correlations for import into validation RMD
 lpath <- paste0(fdir, lname)
-save(power_mutl_storage, file= lpath)
+#save(power_mutl_storage, file= lpath)
 
 ```
 
