--- a/Verification_Level2RCT.Rmd
+++ b/Verification_Level2RCT.Rmd
@@ -13,6 +13,8 @@ output: html_document:
 
 ```{r}
 library(yaml)
+library(knitr)
+library(kableExtra)
 
 #read in configs file
 configs <- yaml.load_file("configs.yaml")
@@ -91,10 +93,24 @@ colnames(MCmethods) <- paste("sim", colnames(MCmethods), sep = "_")
 #merge methods and sim tables
 validtable <- merge(ourmethods, MCmethods, by.x = c("method_adjname", "method_correlation"), by.y = c("sim_adjname", "sim_correlation"), all = TRUE) 
 
-#reorder/subset columns
+#reorder/subset columns and obs
+levels(validtable$method_adjname) <- c("rawp", "BF", "HO", "BH", "WY-SD", "WY-SS")
+
 validtable <- validtable[, c("method_adjname", "method_correlation", "method_indiv", "sim_D1indiv", "method_min1", "sim_min", "method_min2",
                              "sim_1/3", "method_min4", "sim_2/3", "method_complete", "sim_full")]
 
+
+
+#table aesthetics
+kable(validtable[, 2:12], caption = "MTP Used and Correlations") %>%
+  kable_styling("striped") %>%
+  add_header_above(c(" " = 1, "Individual" = 2, "1-minimal" = 2, "1/3-minimal" = 2, "2/3-minimal" = 2, "Complete" = 2)) %>%
+  group_rows("No adjustment", 1, 4) %>%
+  group_rows("Bonferroni", 5, 8) %>%
+  group_rows("Holm", 9, 12) %>%
+  group_rows("Benjamini-Hochberg", 13, 16) %>%
+  group_rows("Westfall-Young (step-down)", 17, 20) %>%
+  group_rows("Westfall-Young (single-step)", 21, 24)
 
 
 
