--- a/powerFunctions.Rmd
+++ b/powerFunctions.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Power Under Multiplicity Functions"
 author: "Kristin Porter"
-date: "September 13, 2016"
+date: "`r format(Sys.time(), '%B %d, %Y')`"
 output: html_notebook
 ---
 
@@ -110,9 +110,9 @@ df<-function(J,n.j,numCovar.1) {J*n.j - J - numCovar.1 - 1}
 
 ```{r}
 power.blockedRCT.2<-function(M, MDES, J, n.j,
-                             p, alpha, numCovar.1, numCovar.2=0, R2.1, R2.2, ICC, 
+                             p, alpha, numCovar.1, numCovar.2, R2.1, R2.2, ICC, 
                              mod.type, sigma, omega,
-                             tnum = 10000, snum=1000, ncl=2) {
+                             tnum, snum, ncl) {
 
 # load required packages
   require(MASS); require(mvtnorm); require(multtest); require(doParallel)
@@ -245,14 +245,14 @@ for (rho in configs$rho) {
   
   #export separate data files
   fpath<- paste0(fdir,filname)
-#  save(power.mult, file=fpath)
+  save(power.mult, file=fpath)
   loop_idx <- loop_idx + 1
 
 }
 
 #export the list of data files with different correlations for import into validation RMD
 lpath <- paste0(fdir, lname)
-#save(power_mutl_storage, file= lpath)
+save(power_mutl_storage, file= lpath)
 
 ```
 
