--- a/MonteCarloSimulation.Rmd
+++ b/MonteCarloSimulation.Rmd
@@ -2,7 +2,7 @@
 title: "Monte Carlo Simulation Code"
 author: "Kristin Porter and Deni Chen"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
-output: html_notebook
+output: github_document
 ---
 
 This code generates the Monte Carlo simulations for validating methods in the paper (table C.3) and calls items from I:\Multiplicity\Archive\Domino Copy\ECmethods\R.
