--- a/TwoLevelBlockedTreatmentLevel1.Rmd
+++ b/TwoLevelBlockedTreatmentLevel1.Rmd
@@ -1,4 +1,3 @@
----
 title: "Power Under Multiplicity Functions"
 author: "Kristin Porter"
 date: "September 13, 2016"
@@ -57,7 +56,6 @@ adjust.allsamps.WYSD<-function(snum,abs.Zs.H0,abs.Zs.H1,order.matrix,ncl) {
   clusterExport(cl=cl, list("comp.rawt.SD"))
   M<-ncol(abs.Zs.H0)
   adjp.WY<-matrix(NA,snum,M)
-
   doWY <- foreach(s=1:snum, .combine=rbind) %dopar% {
     ind.B<-t(apply(abs.Zs.H0, 1, comp.rawt.SD, abs.Zs.H1.1samp=abs.Zs.H1[s,], oo=order.matrix[s,]))
     pi.p.m <- colMeans(ind.B) 
@@ -82,12 +80,9 @@ t.mean.H1<-function(MDES,J,n.j,R2.1,p) { MDES * sqrt(p*(1-p)*J*n.j) / sqrt(1-R2.
 ```
 
 $t(m)$ also has degrees of freedom, $df = Jn_j - J - g^*(m)-1$, where $g^*(m)$ is the toal number of baseline covariates included in the model for the $m^th$ outcome, including the block indicators so that $g^*(m)=J+k(m)$.
-
 ```{r}
 df<-function(J,n.j,numCovar.1) {J*n.j - J - numCovar.1 - 1}
 ```
-
-
  *power.blocked.RCT.2: for 2 level blocked RCT*
     # estimates power, MDES or sample size (either number of blocks or number of units per block)
     # for either constant, fixed or random effects
@@ -113,7 +108,6 @@ power.blockedRCT.2<-function(M, MDES, J, n.j,
                              p, alpha, numCovar.1, numCovar.2=0, R2.1, R2.2, ICC, 
                              mod.type, sigma, omega,
                              tnum = 10000, snum=1000, ncl=2) {
-
 # load required packages
   require(MASS); require(mvtnorm); require(multtest); require(doParallel)
   
@@ -135,7 +129,6 @@ power.blockedRCT.2<-function(M, MDES, J, n.j,
   
 # adjust p-values for all but Westfall-Young  
   adjp<-apply(pvals.H1,1,mt.rawp2adjp,proc=c("Bonferroni","Holm","BH"),alpha=alpha)
-
   grab.pval<-function(...,proc) {return(...$adjp[order(...$index),proc])}
   rawp<-do.call(rbind,lapply(adjp,grab.pval,proc="rawp"))
   adjp.BF<-do.call(rbind,lapply(adjp,grab.pval,proc="Bonferroni"))
@@ -146,23 +139,19 @@ power.blockedRCT.2<-function(M, MDES, J, n.j,
   order.matrix<-t(apply(abs.Zs.H1,1,order,decreasing=TRUE))
   adjp.SS<-adjust.allsamps.WYSS(snum,abs.Zs.H0,abs.Zs.H1)
   adjp.WY<-adjust.allsamps.WYSD(snum,abs.Zs.H0,abs.Zs.H1,order.matrix,ncl)
-
 # combine all adjusted p-values in list (each entry is matrix for given MTP)
   adjp.all<-list(rawp,adjp.BF,adjp.HO,adjp.BH,adjp.SS,adjp.WY)
   
 # for each MTP, get matrix of indicators of whether adjusted p-value is less than alpha  
   reject<-function(x) {as.matrix(1*(x<alpha))}
   reject.all<-lapply(adjp.all,reject)
-
 # in each row for each MTP matrix, count number of p-values less than 0.05, in rows corresponding to false nulls
   lt.alpha<-function(x) {apply(as.matrix(x[,MDES>0]),1,sum)}
   lt.alpha.all<-lapply(reject.all,lt.alpha)
-
 # indiv power for WY, BH, and HO is mean of columns of dummies of whether adjusted pvalues were less than alpha
   power.ind.fun<-function(x) {apply(x,2,mean)}
   power.ind.all<-lapply(reject.all,power.ind.fun)
   power.ind.all.mat<-do.call(rbind,power.ind.all)
-
 # m-min powers for all procs (including complete power when m=M)
   power.min.fun <- function(x,M) {
     power.min<-numeric(M)
@@ -182,18 +171,14 @@ power.blockedRCT.2<-function(M, MDES, J, n.j,
   
 # combine all power for all definitions
   all.power.results<-cbind(power.ind.all.mat,power.min.mat[,-M],power.cmp)
-
 # take mean of all individual power estimates
   mean.ind.power <- apply(as.matrix(all.power.results[,1:M][,MDES>0]),1,mean)
-
 # revise final matrix to report this mean individual power and return results  
   all.power.results<-cbind(mean.ind.power,all.power.results)
   colnames(all.power.results)<-c("indiv",paste0("indiv",1:M),paste0("min",1:(M-1)),"complete")
   rownames(all.power.results)<-c("rawp","BF","HO","BH","WY-SS","WY-SD")
   return(all.power.results)
 }
-
-
 ```
 
 
@@ -210,6 +195,22 @@ Then, power $(1-\beta)$ is the inverse of the cumulative density function (t-dis
 If alternatively, $ES(m)=$ a specified minimum detectable effect size (MDES), then $t(m)$ has a t-distribution with mean $\frac{MDES(m)},{Q(m)}$ and again degrees of freedom $df$. Therefore, the critical value for determining power for rejecting the $m^{th}$ null hypothesis, $c_{(1-\beta)}(m)$, is given by
 
 
+ 
+```{r MDESfun, message=FALSE, warning=FALSE}
+
+midpoint<-function(lower,upper) {lower+(dist(c(lower,upper))/2)}
+
+MDES.blockedRCT.2<-function(M, numFalse, J, n.j, power, power.definition, MTP, marginError,
+                            p, alpha, numCovar.1, numCovar.2=0, R2.1, R2.2, ICC, 
+                            mod.type, sigma, omega,
+                            tnum = 10000, snum=2, ncl=2, display.progress=TRUE) {
+  
+  print(paste("Estimating MDES for target ",power.definition,"power of ",round(power,4)))
+  
+  if (MTP=="WY-SD" & snum <1000) print("For the step-down Westfall-Young procedure, it is recommended that snum be at least 1000.")
+  if (MTP!="WY-SD") snum<- 2
+  
+# Compute Q(m)
   Q.m<-sqrt( (1-R2.1) / (p*(1-p)*J*n.j) )
   t.df<-df(J,n.j,numCovar.1)
   
@@ -217,109 +218,132 @@ If alternatively, $ES(m)=$ a specified minimum detectable effect size (MDES), th
   crit.alpha <- qt(p=(1-alpha/2),df=t.df)  
   crit.alphaxM <- qt(p=(1-alpha/M/2),df=t.df)  
   
-
 # Compute raw and BF MDES for INDIVIDUAL POWER
-  crit.beta <- qt(power,df=t.df)
+  crit.beta <- ifelse(power > 0.5, qt(power,df=t.df), qt(1-power,df=t.df))
   MDES.raw <- ifelse(power > 0.5, Q.m * (crit.alpha + crit.beta), Q.m * (crit.alpha - crit.beta)) 
   MDES.BF <- ifelse(power > 0.5, Q.m * (crit.alphaxM + crit.beta), Q.m * (crit.alphaxM - crit.beta)) 
   
 ### INDIVIDUAL POWER ###
 if (power.definition=="indiv") {  
   if (MTP == "raw") return (c(MDES.raw,power))
-  if (MTP == "BF")  return (c(MDES.BF,power)) 
+  if (MTP == "BF")  return (c(MDES.BF,power))
 }
-
-```{r MDESfun, message=FALSE, warning=FALSE}
-
-MDES.blockedRCT.2<-function(M, numFalse, J, n.j, power, power.definition, MTP, marginError,
-                            p, alpha, numCovar.1, numCovar.2=0, R2.1, R2.2, ICC, 
-                            mod.type, sigma, omega,
-                            tnum = 10000, snum=2, ncl=2) {
-
-# We don't need snum high if not WY  
-  if (!(MTP %in% c("WY-SS","WY-SD"))) snum <- 2
-    
-# Compute Q(m)
     
 # For individual power, other MDES's will be between MDES.raw and MDES.BF, so make starting value the midpoint
   if (MTP %in% c("HO","BH","WY-SS","WY-SD") & power.definition == "indiv") {
     lowhigh <- c(MDES.raw,MDES.BF)
-    try.MDES <- (MDES.raw + MDES.BF) / 2
+    try.MDES <- midpoint(MDES.raw,MDES.BF)
   }
 
-# For minimal powers, makes starting value = MDES.raw
-  if (power.definition != "indiv")  {
-    lowhigh <- c(0,1)
-    try.MDES <- MDES.raw
-  }
-    target.power <- 0 
-    ii <- 0
-    while (ii < 10 & (target.power < power - marginError | target.power > power + marginError)) {
-      print(lowhigh)
-      print(target.power)
-      print(try.MDES)
+# For other scenarios, set lowhigh intervals and compute midpoint
+  ifelse (power.definition=="indiv", lowhigh<-c(MDES.raw,1), lowhigh<-c(0,1) )
+  try.MDES <- midpoint(lowhigh[1],lowhigh[2])
+
+      ii <- 0
+      target.power <- 0
+    while (ii < 20 & (target.power < power - marginError | target.power > power + marginError)) {   
+      if (display.progress) {
+        print(paste0("MDES is in the interval [",round(lowhigh[1],4),",",round(lowhigh[2],4),"]"))
+        print(paste("Trying MDES of",round(try.MDES,4)))
+      }
+ 
       runpower <- power.blockedRCT.2(M, try.MDES, J, n.j,
                                      p, alpha, numCovar.1, numCovar.2=0, R2.1, R2.2, ICC, 
                                      mod.type, sigma, omega,
                                      tnum, snum, ncl)
-      #print(runpower)
+
       target.power <- runpower[MTP,power.definition]
+      if (display.progress) print(paste("Estimated power for this MDES is",round(target.power,4)))
+
       is.over <- target.power > power
       if(target.power > power - marginError & target.power < power + marginError) return(c(try.MDES,target.power))
       if(!is.over) {
-        p.off <- (power - target.power) / power
         lowhigh[1] <- try.MDES
       }
       if(is.over) {
         lowhigh[2] <- try.MDES
-        p.off <- (target.power - power) / (1 - power)
       }
-      lowhigh.dist <- lowhigh[2]-lowhigh[1]
-#      try.MDES <- ifelse(is.over, lowhigh[2] - p.off * lowhigh.dist, lowhigh[1] + p.off*lowhigh.dist)
-      try.MDES <- ifelse(target.power < power, (try.MDES + lowhigh[2])/2, (try.MDES + lowhigh[1])/2) # midpoint
-      ii <- ii + 1
+ #     lowhigh.dist <- lowhigh[2]-lowhigh[1]
+ #     try.MDES <- ifelse(target.power < power, (try.MDES + lowhigh[2])/2, (try.MDES + lowhigh[1])/2) # midpoint
+      try.MDES <- midpoint(lowhigh[1],lowhigh[2])
+      ii <- ii + 1 
       } # end while
 }
+```
 
+
+# this is a help function for getting SS when no adjustment - it starts with PowerUp package function mrss.bira2cl but that function seems to have a bug - only works if pass in numeric values and not if pass in objects that hold those values. Plus mrss.bira2cl only computes J, not n.j
+
+
+```{r SScalcSingle, message=FALSE, warning=FALSE}
+SS.blockedRCT.2.RAW<-function(J, n.j, J0=10, n.j0=10, whichSS, MDES, power, p, alpha, numCovar.1, numCovar.2=0, R2.1, R2.2, ICC, mod.type, sigma, omega, two.tailed = TRUE, num.iter = 100, tol=0.1) {
+  i <- 0
+    conv <- FALSE
+    while (i <= num.iter & conv == FALSE) {
+        if (whichSS=="J") df <- J0 * (n.j - 1) - numCovar.1 - 1
+        if (whichSS=="n.j") df <- J * (n.j0 - 1) - numCovar.1 - 1
+        if (df < 0 | df < 0 | is.infinite(df)) {
+            break
+        }
+        T1 <- ifelse(two.tailed == TRUE, abs(qt(alpha/2, df)), 
+            abs(qt(alpha, df)))
+        T2 <- abs(qt(power, df))
+        MT <- ifelse(power >= 0.5, T1 + T2, T1 - T2)
+        if (whichSS=="J") {
+          J1 <- (MT/MDES)^2 * ((1 - R2.1)/(p * (1 - p) * n.j))
+          if (abs(J1 - J0) < tol) {
+            conv <- TRUE
+          }
+          J0 <- (J1 + J0)/2
+        }
+        if (whichSS=="n.j") {
+          n.j1 <- (MT/MDES)^2 * ((1 - R2.1)/(p * (1 - p) * J))
+          if (abs(n.j1 - n.j0) < tol) {
+            conv <- TRUE
+          }
+          n.j0 <- (n.j1 + n.j0)/2
+        }
+        
+        i <- i + 1
+    }
+    if (whichSS=="J") {
+      J <- ifelse(df > 0, round(J0), NA)
+      return(J)
+    }
+    if (whichSS=="n.j") {
+      n.j <- ifelse(df > 0, round(n.j0), NA)
+      return(n.j)
+    }
+
+}
 ```
 
 These currrently only work if numFalse = M and if MDES is the same or all outcomes. 
 
+
 ```{r SSfun, message=FALSE, warning=FALSE}
+SS.blockedRCT.2<-function(M, numFalse, J, n.j, J0, n.j0, MDES, power, power.definition, MTP, marginError,p, alpha, numCovar.1, numCovar.2=0, R2.1, R2.2, ICC,mod.type, sigma, omega,tnum = 10000, snum=2, ncl=2, num.iter = 20, display.progress=TRUE) {
 
-SS.blockedRCT.2<-function(M, numFalse, J, n.j, MDES, power, power.definition, MTP, marginError,p, alpha, numCovar.1, numCovar.2=0, R2.1, R2.2, ICC,mod.type, sigma, omega,tnum = 10000, snum=2, ncl=2) {
 
-  # We don't need snum high if not WY  
-  if (!(MTP %in% c("WY-SS","WY-SD"))) snum <- 2
-    
- # Compute Q(m)
-  Q.m<-sqrt( (1-R2.1) / (p*(1-p)*J*n.j) )
-  t.df<-df(J,n.j,numCovar.1)
-
-# For raw and BF, compute critical values 
-  crit.alpha <- qt(p=(1-alpha/2),df=t.df)  
-  crit.alphaxM <- qt(p=(1-alpha/M/2),df=t.df)  
-  
-# Compute raw and BF MDES for INDIVIDUAL POWER
-  crit.beta <- qt(power,df=t.df)
-
-# Compute Q(m)
-  multiplier.raw <- ifelse(power > 0.5, crit.alpha + crit.beta, crit.alpha - crit.beta) 
-  multiplier.BF <- ifelse(power > 0.5, crit.alphaxM + crit.beta, crit.alphaxM - crit.beta)
-  
 # indicator for which ss to compute
   doJ <- is.null(J)
   don.j <- is.null(n.j)
   
+  ifelse(doJ,whichSS<-"J",whichSS<-"n.j")
+  print(paste("Estimating",whichSS,"for target ",power.definition,"power of ",round(power,4)))
+
+  
 # Compute J or n.j for raw and BF SS for INDIVIDUAL POWER
+# for now assuming only two tailed tests
  if (doJ) {
-   J.raw <- (multiplier.raw/MDES)^2 * ( (1-R2.1) / (p*(1-p)*n.j) )
-   J.BF <-  (multiplier.BF/MDES)^2 * ( (1-R2.1) / (p*(1-p)*n.j) )
- }
+   J.raw <- SS.blockedRCT.2.RAW(J=NULL, n.j, J0=J0, n.j0=n.j0, whichSS, MDES, power, p, alpha, numCovar.1, numCovar.2=0, R2.1, R2.2, ICC, mod.type, sigma, omega, num.iter = 100, tol=0.1)
+   J.BF <- SS.blockedRCT.2.RAW(J=NULL, n.j, J0=J0, n.j0=n.j0, whichSS, MDES, power, p, alpha/M, numCovar.1, numCovar.2=0, R2.1, R2.2, ICC, mod.type, sigma, omega, num.iter = 100, tol=0.1)
+
+   }
  if (don.j) {
-   n.j.raw <- ( (multiplier.raw/MDES)^2 * (1-R2.1) ) / (J *(p*(1-p)) )
-   n.j.BF <- ( (multiplier.BF/MDES)^2 * (1-R2.1) ) / (J *(p*(1-p)) )
- }
+   n.j.raw <- SS.blockedRCT.2.RAW(J, n.j=NULL, J0=J0, n.j0=n.j0, whichSS, MDES, power, p, alpha, numCovar.1, numCovar.2=0, R2.1, R2.2, ICC, mod.type, sigma, omega, num.iter = 100, tol=0.1)
+   n.j.BF <- SS.blockedRCT.2.RAW(J, n.j=NULL, J0=J0, n.j0=n.j0, whichSS, MDES, power, p, alpha/M, numCovar.1, numCovar.2=0, R2.1, R2.2, ICC, mod.type, sigma, omega, num.iter = 100, tol=0.1) 
+   }
   
 
 # So below can focus on just the one being estimated
@@ -335,44 +359,42 @@ SS.blockedRCT.2<-function(M, numFalse, J, n.j, MDES, power, power.definition, MT
   
 ### INDIVIDUAL POWER ###
 if (power.definition=="indiv") {  
-  if (MTP == "raw" & doJ) return(J.raw) 
-  if (MTP == "BF" & doJ) return(J.BF) 
-  if (MTP == "raw" & don.j) return(n.j.raw) 
-  if (MTP == "BF" & don.j) return(n.j.BF) 
+  if (MTP == "raw") return(ss.raw) 
+  if (MTP == "BF") return(ss.BF) 
   }
     
-
 # For individual power, other J's or n.j's will be between raw and BF, so make starting value the midpoint
   if (MTP %in% c("HO","BH","WY-SS","WY-SD") & power.definition == "indiv") {
     lowhigh <- c(ss.raw,ss.BF)
-    try.ss <- (ss.raw + ss.BF) / 2
+    try.ss <- midpoint(lowhigh[1],lowhigh[2])
     }
 
 # For minimal powers, makes starting value = raw
   if (power.definition != "indiv")  {
-    lowhigh <- c(0,1)
-    try.ss <- ss.raw
+    lowhigh <- c(0,ss.BF)
+    try.ss <- midpoint(lowhigh[1],lowhigh[2])
   }
-    target.power <- 0 
     ii <- 0
-    while (ii < 10 & (target.power < power - marginError | target.power > power + marginError) ) {
-      print(lowhigh)
-      print(target.power)
-      print(try.ss)
+    target.power <- 0
+    while (ii < num.iter & (target.power < power - marginError | target.power > power + marginError) ) {
+      if (display.progress) {
+       print(paste0(whichSS, " is in the interval [",round(lowhigh[1],4),",",round(lowhigh[2],4),"]"))
+       print(paste("Trying",whichSS,"of",round(try.ss,4)))
+       }
       if (doJ) {
-        runpower <- power.blockedRCT.2(M, MDES, J= try.SS, n.j,
+        runpower <- power.blockedRCT.2(M, MDES, J= try.ss, n.j,
                                      p, alpha, numCovar.1, numCovar.2=0, R2.1, R2.2, ICC, 
                                      mod.type, sigma, omega,
                                      tnum, snum, ncl)
       }
       if (don.j) {
-        runpower <- power.blockedRCT.2(M, MDES, J, n.j=try.SS,
+        runpower <- power.blockedRCT.2(M, MDES, J, n.j=try.ss,
                                      p, alpha, numCovar.1, numCovar.2=0, R2.1, R2.2, ICC, 
                                      mod.type, sigma, omega,
                                      tnum, snum, ncl)
       }
-      #print(runpower)
       target.power <- runpower[MTP,power.definition]
+      if (display.progress) print(paste("Estimated power for this",whichSS,"is",target.power))
       is.over <- target.power > power
       if(target.power > power - marginError & target.power < power + marginError) return(c(try.ss,target.power))
       if(!is.over) {
@@ -389,6 +411,8 @@ if (power.definition=="indiv") {
       try.ss <- ifelse(target.power < power, (try.ss + lowhigh[2])/2, (try.ss + lowhigh[1])/2) # midpoint
       ii <- ii + 1
       } # end while
+    
+    if (ii==num.iter & !(target.power > power - marginError & target.power < power + marginError)) print ("Reached maximum iterations without converging on MDES estimate within margin of error. Try increasing maximum number of iterations (num.iter).")
 
 }
 
@@ -398,6 +422,7 @@ if (power.definition=="indiv") {
 
 ```{r testing, message=FALSE, warning=FALSE}
 
+#library(PowerUpR)
 mdes1 <- 0.125
 alpha <- 0.05
 p <- 0.5
@@ -405,37 +430,60 @@ r2 <- 0.2
 n.j <- 20
 J <- 50
 numCovar.1 <- 1
-M <- 3
-power.definition = "min2"
-MTP="BF"
+M <- 2
+sigma <-matrix(0.99,M,M)
+diag(sigma)<-1
+me <- 0.01
+n.j0<-10
+J0<-10
 
 # PowerUp for comparison of raw individual power
-power.bira2c1(es=mdes1,alpha,two.tailed=TRUE,p,g1=numCovar.1,r21=r2,n=n.j,J=J)
+power.up <- power.bira2c1(es=mdes1,alpha,two.tailed=TRUE,p,g1=numCovar.1,r21=r2,n=n.j,J=J)
 
-sigma <-matrix(0.5,3,3)
-diag(sigma)<-1
 
-test.power <- power.blockedRCT.2(M, MDES=rep(mdes1,3), J, n.j,
+# Power calculations
+test.power <- power.blockedRCT.2(M, MDES=rep(mdes1,M), J, n.j,
                              p, alpha, numCovar.1=1, numCovar.2=0, R2.1=r2, R2.2=NULL, ICC=NULL, 
                              mod.type="c", sigma=sigma, omega=NULL,
-                             tnum = 10000, snum=1000, ncl=2)
+                             tnum = 10000, snum=10, ncl=2)
 test.power
+# If TRUE, then raw individual power matches estimate from Power-Up.
+power.up$power < (test.power["rawp","indiv"] + me) & power.up$power > (test.power["rawp","indiv"] - me)
 
-
-test.MDES <- MDES.blockedRCT.2(M, numFalse = M, J, n.j, power=0.417, power.definition, MTP, marginError = 0.005,
-                          p, alpha, numCovar.1=0, numCovar.2=0, R2.1=r2, R2.2=0, ICC=0, 
+# MDES calculations (be sure to do this for power estimates less than and greater than 0.5)
+  ## indiv, BF
+test.MDES <- MDES.blockedRCT.2(M, numFalse = M, J, n.j, power=test.power["BF","indiv"], power.definition = "indiv", MTP="BF", marginError = me, p, alpha, numCovar.1=0, numCovar.2=0, R2.1=r2, R2.2=0, ICC=0, 
                           mod.type="constant", sigma=sigma, omega=NULL,
                           tnum = 10000, snum=2, ncl=2)
-
-
-print(test.MDES)
-
-test.SS <- SS.blockedRCT.2(M, numFalse = M, J=NULL, n.j, MDES = power=0.417, power.definition, MTP, marginError = 0.005,
-                          p, alpha, numCovar.1=0, numCovar.2=0, R2.1=r2, R2.2=0, ICC=0, 
+test.MDES[1] < (mdes1 + me) & test.MDES[1] > (mdes1 - me)
+  ## indiv, BH
+test.MDES <- MDES.blockedRCT.2(M, numFalse = M, J, n.j, power=test.power["BH","indiv"], power.definition = "indiv", MTP="BH", marginError = me, p, alpha, numCovar.1=0, numCovar.2=0, R2.1=r2, R2.2=0, ICC=0, 
+                          mod.type="constant", sigma=sigma, omega=NULL,
+                          tnum = 10000, snum=2, ncl=4)
+test.MDES[1] < (mdes1 + me) & test.MDES[1] > (mdes1 - me)
+  ## min1, BH
+test.MDES <- MDES.blockedRCT.2(M, numFalse = M, J, n.j, power=test.power["BH","min1"], power.definition = "min1", MTP="BH", marginError = me, p, alpha, numCovar.1=0, numCovar.2=0, R2.1=r2, R2.2=0, ICC=0, 
                           mod.type="constant", sigma=sigma, omega=NULL,
                           tnum = 10000, snum=2, ncl=2)
+test.MDES[1] < (mdes1 + me) & test.MDES[1] > (mdes1 - me)
+  ## min2, WY-SD
+test.MDES <- MDES.blockedRCT.2(M, numFalse = M, J, n.j, power=test.power["WY-SD","min1"], power.definition = "min1", MTP="WY-SD", marginError = me, p, alpha, numCovar.1=0, numCovar.2=0, R2.1=r2, R2.2=0, ICC=0, 
+                          mod.type="constant", sigma=sigma, omega=NULL,
+                          tnum = 10000, snum=1000, ncl=2)
+test.MDES[1] < (mdes1 + me) & test.MDES[1] > (mdes1 - me)
 
+  ## indiv, BF, J
+test.SS <- SS.blockedRCT.2(M, numFalse = M, J=NULL, n.j, J0=J0, n.j0=n.j0, MDES = rep(mdes1,M), power=test.power["BF","indiv"], power.definition = "indiv", MTP = "BF", marginError = 0.005,p, alpha, numCovar.1=0, numCovar.2=0, R2.1=r2, R2.2=0, ICC=0, mod.type="constant", sigma=sigma, omega=NULL,  tnum = 10000, snum=2, ncl=4)
 print(test.SS)
+
+  ## indiv, BH, n.j
+test.SS <- SS.blockedRCT.2(M, numFalse = M, J, n.j=NULL, J0=J0, n.j0=n.j0, MDES = mdes1, power=test.power["BH","indiv"], power.definition = "indiv", MTP = "BH", marginError = 0.005,p, alpha, numCovar.1=0, numCovar.2=0, R2.1=r2, R2.2=0, ICC=0, mod.type="constant", sigma=sigma, omega=NULL,  tnum = 10000, snum=2, ncl=4)
+print(test.SS)
+
+  ## min1, BH, J
+test.SS <- SS.blockedRCT.2(M, numFalse = M, J=NULL, n.j, J0=J0, n.j0=n.j0, MDES = mdes1, test.power["BH","min1"], power.definition = "min1", MTP = "BH", marginError = 0.005,p, alpha, numCovar.1=0, numCovar.2=0, R2.1=r2, R2.2=0, ICC=0, mod.type="constant", sigma=sigma, omega=NULL,  tnum = 10000, snum=2, ncl=4)
+print(test.SS)
+
 ```
 
 test.SS <- SS.blockedRCT.2(M, numFalse = M, J=NULL, n.j, power=0.417, power.definition, MTP, marginError = 0.005, p, alpha, numCovar.1=0, numCovar.2=0, R2.1=r2, R2.2=0, ICC=0 mod.type="constant", sigma=sigma, omega=NULL,tnum = 10000, snum=2, ncl=2)
@@ -443,3 +491,6 @@ test.SS <- SS.blockedRCT.2(M, numFalse = M, J=NULL, n.j, power=0.417, power.defi
 NOTES:
     # how do we optimize tnum and snum - can we provide margin of error? 
     # how to handle MDES when numfalse not equal to M
+
+ 
+
